# rusty-book-manager

./: .dockerignore  Cargo.toml  Dockerfile  Makefile.toml  rust-toolchain.toml
.cargo/: config.toml
adapter/: Cargo.toml
adapter/migrations/: 20250629022729_start.down.sql  20250629022729_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs
adapter/src/repository/: auth.rs  book.rs
api/: Cargo.toml
api/src/handler/: auth.rs  book.rs
api/src/model/: auth.rs  book.rs
api/src/route/: book.rs
data/: initial_setup.sql
frontend/: .dockerignore
infra/_codebuild/: buildspec.yaml
kernel/: Cargo.toml
kernel/src/model/: id.rs
kernel/src/model/book/: event.rs
kernel/src/repository/: book.rs
registry/: Cargo.toml
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs  error.rs
src/: main.rs
