[package]
    edition.workspace = true
    license.workspace = true
    name              = "api"
    publish.workspace = true
    version           = "0.1.0"

[dependencies]
    axum.workspace         = true
    axum-extra.workspace   = true
    chrono.workspace       = true
    derive-new.workspace   = true
    garde.workspace        = true
    kernel.workspace       = true
    registry.workspace     = true
    serde.workspace        = true
    shared.workspace       = true
    strum.workspace        = true
    thiserror.workspace    = true
    tokio.workspace        = true
    tokio-stream.workspace = true
    tower.workspace        = true
    tracing.workspace      = true
    utoipa.workspace       = true
    uuid.workspace         = true

[dev-dependencies]
    anyhow.workspace  = true
    hyper             = "1.6.0"
    mockall.workspace = true
    rstest            = "0.25.0"
    serde_json        = "1.0.140"
